--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ui-trellis",
+  "name": "@rundeck/ui-trellis",
   "version": "0.0.1",
   "description": "A collection of utilities used across various javascript applications and components.",
   "main": "index.js",
