--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@rundeck/ui-trellis",
   "version": "0.0.1",
   "description": "A collection of utilities used across various javascript applications and components.",
-  "main": "./dist/index.js",
+  "main": "./src/index.ts",
   "types": "./dist/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
