add vue, vue-property-decorator packages

--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "homepage": "https://github.com/rundeck/ui-trellis#readme",
   "dependencies": {
     "axios": "^0.18.0",
-    "ts-rundeck": "0.0.14"
+    "ts-rundeck": "0.0.14",
+    "vue": "^2.5.17",
+    "vue-property-decorator": "^7.3.0"
   },
   "publishConfig": {
     "access": "public"
