--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "axios": "^0.18.0",
     "ts-rundeck": "0.0.14"
   },
+  "peerDependencies": {
+    "uiv": "^0.27.0"
+  },
   "publishConfig": {
     "access": "public"
   }
