--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "ts-rundeck": "0.0.14",
+    "uiv": "^0.27.0",
     "vue": "2.5.17",
     "vue-property-decorator": "^7.3.0"
   },
