--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
         "experimentalDecorators": true,
         "esModuleInterop": true,
         "declaration": false,
+        "allowSyntheticDefaultImports": true,
         "typeRoots": [
             "src/types"
         ]
