--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,10 @@
         "allowSyntheticDefaultImports": true,
         "typeRoots": [
             "src/types"
-        ]
+        ],
+        "paths": {
+            "@/*": ["*"],
+        },
     },
     "include": [
         "./src/**/*"
