--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "ts-rundeck": "0.0.14",
     "uiv": "^0.27.0",
     "vue": "2.5.17",
-    "vue-property-decorator": "^7.3.0"
+    "vue-property-decorator": "^7.3.0",
+    "brace": "^0.11.1",
+    "vue2-ace-editor": "0.0.11"
   },
   "publishConfig": {
     "access": "public"
