--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "uiv": "^0.27.0",
-    "vue": "2.5.17",
+    "vue": "^2.5.17",
     "vue-property-decorator": "^7.3.0",
     "brace": "^0.11.1",
     "vue2-ace-editor": "0.0.11",
